--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ TO DO:
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="https://stevenmilov.github.io/dance-evolution-club/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 
     <title>Dance Evolution</title>
 
@@ -79,7 +79,7 @@ TO DO:
                             <h1>
 
 
-                                <a href="#headere-top" id = "danceEvolutionLogo" title="Rooky"><img src="https://stevenmilov.github.io/dance-evolution-club/images/logo.png" alt="Rooky" title="Rooky" style="width:2em; height:2em;"/></a>
+                                <a href="#headere-top" id = "danceEvolutionLogo" title="Rooky"><img src="images/logo.png" alt="Rooky" title="Rooky" style="width:2em; height:2em;"/></a>
 
                             </h1>
 
@@ -159,19 +159,24 @@ TO DO:
                     .nowrap {
                       white-space: nowrap;
                     }
+                    .div-centered {
+                      text-align: left;
+                      margin: auto;
+                      width: 500px;
+                    }
                     </style>
                     <br><br><br><br><br><br>
                         <div class="row">
-                          <div class="col-sm-3 col-md-5"></div>
-                          <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
-                            <div style="text-align:left">
+                          <!-- <div class="col-sm-3 col-md-5"></div> -->
+                          <!-- <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0"> -->
+                            <div class="div-centered">
                             <!-- <img alt="" src="https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png" draggable="false" usemap="#gmimap0" style="left: 0px; top: 0px; width: 27px; height: 43px; user-select: none; border: 0px; padding: 0px; margin: 0px; max-width: none;"> -->
                             <a href="https://www.google.com/maps/place/479+N+Midland+Ave,+Saddle+Brook,+NJ+07663/@40.9134669,-74.1110669,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2fb93074424df:0x47ed784057b503a8!8m2!3d40.9134669!4d-74.1088782" target="_blank" style="color:white">
                               <i class="material-icons nowrap" style="font-size:36px;color:white">place</i>479 N Midland Ave Saddle Brook, NJ 07663
                               <br /><i class="material-icons" style="font-size:36px;color:white">&#xe551;</i>201-791-6060
                             </a>
                             </div>
-                          </div>
+                          <!-- </div> -->
                         </div>
 
 
@@ -187,7 +192,7 @@ TO DO:
 
         	<figure>
 
-            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="images/daveShelly.jpg" ></div>
+            	<div class="parallax-window item tp-banner-container container-fluid" data-parallax="scroll" data-image-src="images/daveShelly.jpg" ></div>
 
             </figure>
 
@@ -217,31 +222,31 @@ TO DO:
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2 ">
 
-                        	<a href="#"><img src="https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-1.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src="images/logoes/logoes-1.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
-                        	<a href="#"><img src="https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-2.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src="images/logoes/logoes-2.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
-                        	<a href="#"><img src="https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-3.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src="images/logoes/logoes-3.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
-                        	<a href="#"><img src="https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-4.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src="images/logoes/logoes-4.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
-                        	<a href="#"><img src="https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-5.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src="images/logoes/logoes-5.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
@@ -530,7 +535,7 @@ TO DO:
 
                     <div class="col-xs-12 col-sm-6 col-md-6">
 
-                        <figure class="row" style="background:url('./images/sasha-dance.jpg')"></figure>
+                        <figure class="row" style="background-image:url('images/sasha-dance.jpg')"></figure>
 
                     </div>
 
@@ -546,7 +551,7 @@ TO DO:
 
                     <div class="col-xs-12 col-sm-6 col-md-6">
 
-                    	<figure class="row" style="background-image:url('https://stevenmilov.github.io/dance-evolution-club/images/sasha-dance.jpg')"></figure>
+                    	<figure class="row" style="background-image:url('images/sasha-dance.jpg')"></figure>
 
                     </div>
 
@@ -835,7 +840,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src=url('https://stevenmilov.github.io/dance-evolution-club/images/Inna.jpg') alt="" class=" img-responsive"/></figure>
+                        	<figure><img src='images/Inna.jpg' alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
@@ -861,7 +866,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/aa.jpg' alt="" class=" img-responsive"/></figure>
+                        	<figure><img src='images/aa.jpg' alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
@@ -889,7 +894,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/Sasha.jpg' alt="" class=" img-responsive"/></figure>
+                        	<figure><img src='images/Sasha.jpg' alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
@@ -925,7 +930,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/max.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src='images/max.jpg' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -951,7 +956,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/Nika.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src='images/Nika.jpg' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -977,7 +982,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/klinchiks.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src='images/klinchiks.jpg' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -1014,7 +1019,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/Romashkina.jpg' alt="" class=" img-responsive"/></figure>
+                            	<figure><img src='images/Romashkina.jpg' alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1040,7 +1045,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/Andre.jpg' alt="" class=" img-responsive"/></figure>
+                            	<figure><img src='images/Andre.jpg' alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1066,7 +1071,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src="https://stevenmilov.github.io/dance-evolution-club/images/Julz.jpg" alt="" class=" img-responsive"/></figure>
+                            	<figure><img src="images/Julz.jpg" alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1100,7 +1105,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/Nastya.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src='images/Nastya.jpg' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
@@ -1127,7 +1132,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/Dave.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src='images/Dave.jpg' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
@@ -1153,7 +1158,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/Shelly.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src='images/Shelly.jpg' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
