--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ TO DO:
 
         	<figure>
 
-            	<div class="parallax-window item tp-banner-container container-fluid" data-parallax="scroll" data-image-src="images/daveShelly.jpg" ></div>
+            	<div class="parallax-window item tp-banner-container container-fluid" data-parallax="scroll" data-image-src="images/daveShelly.JPG" ></div>
 
             </figure>
 
@@ -840,7 +840,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src='images/Inna.jpg' alt="" class=" img-responsive"/></figure>
+                        	<figure><img src='images/Inna.JPG' alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
@@ -866,7 +866,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src='images/aa.jpg' alt="" class=" img-responsive"/></figure>
+                        	<figure><img src='images/aa.JPG' alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
@@ -930,7 +930,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='images/max.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src='images/max.JPG' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -956,7 +956,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='images/Nika.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src='images/Nika.JPG' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -982,7 +982,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='images/klinchiks.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src='images/klinchiks.JPG' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -1019,7 +1019,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src='images/Romashkina.jpg' alt="" class=" img-responsive"/></figure>
+                            	<figure><img src='images/Romashkina.JPG' alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1045,7 +1045,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src='images/Andre.jpg' alt="" class=" img-responsive"/></figure>
+                            	<figure><img src='images/Andre.JPG' alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1071,7 +1071,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src="images/Julz.jpg" alt="" class=" img-responsive"/></figure>
+                            	<figure><img src="images/Julz.JPG" alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1105,7 +1105,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='images/Nastya.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src='images/Nastya.JPG' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
@@ -1132,7 +1132,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='images/Dave.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src='images/Dave.JPG' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
@@ -1158,7 +1158,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='images/Shelly.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src='images/Shelly.JPG' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
