--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ TO DO:
                     </style>
                     <br><br><br><br><br><br>
                         <div class="row">
-                          <!-- <div class="col-sm-3 col-md-5"></div> -->
-                          <!-- <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0"> -->
+                          <div class="col-sm-3 col-md-5"></div>
+                          <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
                             <div class="div-centered">
                             <!-- <img alt="" src="https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png" draggable="false" usemap="#gmimap0" style="left: 0px; top: 0px; width: 27px; height: 43px; user-select: none; border: 0px; padding: 0px; margin: 0px; max-width: none;"> -->
                             <a href="https://www.google.com/maps/place/479+N+Midland+Ave,+Saddle+Brook,+NJ+07663/@40.9134669,-74.1110669,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2fb93074424df:0x47ed784057b503a8!8m2!3d40.9134669!4d-74.1088782" target="_blank" style="color:white">
@@ -176,7 +176,7 @@ TO DO:
                               <br /><i class="material-icons" style="font-size:36px;color:white">&#xe551;</i>201-791-6060
                             </a>
                             </div>
-                          <!-- </div> -->
+                          </div>
                         </div>
 
 
