--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ TO DO:
                               <th>Thursday</th>
                               <th>Friday</th>
                               <th>Saturday</th>
-                              <th>Sunday</th>
+
 
                             </tr>
                           </thead>
@@ -320,45 +320,43 @@ TO DO:
                           <tbody>
                             <tr class="table-success">
                               <th scope="row"></th>
-                                      <td class="success">Syllabus 5-7 Lat.
+                                      <td class="success">Syllabus Latin 9-11
                               <br />5:30 – 6:15
                               </td>
-                                      <td class="success">Beginner 7 & Up
+                                      <td bgcolor="#B8D9FE">Syllabus Couples 9-14
+                              <br />6:15 - 7:00
+                              </td>
+                                      <td class="success">Syllabus Latin 9–11
                               <br />5:30 – 6:15
                               </td>
-                                      <td class="success">Syllabus 9 – 12
-                              <br />5:30 – 6:15
+                                      <td class="success">Teddy Bear 4-6
+                              <br />6:15 - 7:15</td>
+                                      <td class="success">Syllabus Ballroom 7–10
+                              <br />5:15 - 6:00
                               </td>
-                                      <td class="success">Syllabus 5-7 Lat.
-                              <br />6:30 - 7:15</td>
-                                      <td class="success">Advanced Girls
-                              <br />10 – 12
+                                      <td class="success">Syllabus Latin 6-8
+                              <br />10:45 – 11:30
                               </td>
-                                      <td class="success">Syllabus 5-7 Lat. / St.
-                              <br />11:30 – 12:30
-                              </td>
-                                      <td class="success">Beginner 7 & Up
-                              <br />11:00 – 11:45 ST</td>
+
 
                             </tr>
                             <tr>
                               <th scope="row"></th>
-                                        <td class="success">Syllabus 9-12
-                                <br />5:30 – 6:15
+                                        <td class="success">Teddy Bear 4-6
+                                <br />6:15 – 7:15
                                 </td>
 
-                                      <td bgcolor="#B8D9FE">Silver / Gold
-                              <br />6:30 - 7:15</td>
-                                        <td class="success">Beginner 7 & Up
-                                <br />6:30 - 7:15</td>
-                                        <td class="success">Beginner 4-6
-                                <br />6:30 - 7:15</td>
-                                        <td bgcolor="#B8D9FE">Pre-Bronze / Bronze Latin
-                                <br />7:15 – 8:00</td>
-                                        <td bgcolor="#B8D9FE">Silver / Gold
-                                <br />12:30 – 1:15</td>
-                                        <td class="success">Girls 10 & Up
-                                <br />11:45 – 12:30 ST</td>
+                                      <td class="success">Syllabus Latin 7-9
+                              <br />7:15 - 8:00</td>
+                                        <td class="success">Pre-Syllabus Ballroom 6-8
+                                <br />6:15 - 7:00</td>
+                                        <td class="success">Syllabus Latin 5-7
+                                <br />6:15 - 7:15</td>
+                                        <td class="danger">Latin Boot Camp Gold & Up
+                                <br />7:30 – 8:15</td>
+                                        <td class="danger">Latin STAR Seminar
+                                <br />1:30 – 2:130</td>
+
 
                             </tr>
                             <tr>
@@ -366,16 +364,18 @@ TO DO:
                                       <td class="success">Beginner 4-6
                               <br />5:30 – 6:15
                               </td>
-                                      <td></td>
-                                      <td class="success">Adv. Girls 13 & Up
+
+                                      <td class="danger">Adv. Girls 13 & Up
                               <br />6:30 - 7:15</td>
-                                      <td bgcolor="#B8D9FE">Silver / Gold
+                                      <td class="success">Silver / Gold
                               <br />7:15 – 8:00</td>
                                       <td class="danger">Latin Boot Camp Gold & Higher
                               <br />8:00 – 8:45</td>
-                                      <td></td>
-                                      <td class="success">Stretch Class
+
+                                      <td class="danger">Stretch Class
                               <br />12:45 – 1:30</td>
+                                      <td class="success">Silver / Gold
+                              <br />7:15 – 8:00</td>
 
                             </tr>
                             <tr>
@@ -386,32 +386,27 @@ TO DO:
                                       <td></td>
                                       <td bgcolor="#B8D9FE">Pre-Bronze / Bronze Latin
                                       <br />7:15 – 8:00</td>
-                                      <td class="danger">Boot Camp Mix Syllabus Latin
-                              <br />8:00 – 8:45</td>
-                                      <td class="danger">Latin Boot Camp Gold & Higher
-                              <br />8:45 – 9:30</td>
+                                      <td></td>
                                       <td></td>
                                       <td class="success">Adv. Girls 13 & Up
                                         <br />1:30 – 2:15 ST</td>
 
                             </tr>
+
                             <tr>
                               <th scope="row"></th>
+                                      <td class="success">Adv. Girls 13 & Up
+                              <br />6:30 - 7:15
+                              </td>
+                                      <td></td>
                                       <td bgcolor="#B8D9FE">Pre-Bronze / Bronze Latin
-                                        <br />7:15 – 8:00
-                              </td>
-
-
-                            </tr>
-                            <tr>
-                              <th scope="row"></th>
-                                      <td class="success">Advanced Girls
-                                        10 – 12 <br />
-                                        8:00 – 8:45
-                              </td>
-
+                                      <br />7:15 – 8:00</td>
+                                      <td></td>
+                                      <td></td>
+                                      <td></td>
 
                             </tr>
+
                             <tr>
                               <th scope="row"></th>
                                       <td class="danger"> Standard Boot Camp Gold & Higher
@@ -1132,7 +1127,7 @@ TO DO:
 
 
 
-                          
+
                         </div>
 
                     <!-- Team -->
