commented out info panel at top and removed two teachers

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ TO DO:
   <link href="css/popup.css" rel="stylesheet" type="text/css">
 
 </head>
-<div class="d-flex justify-content-center">
+<!-- <div class="d-flex justify-content-center">
 <div class="alert alert-danger page-alert" margin=0 id="alert-1" style="display: block;">
         <button type="button" class="close"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         <h3><strong>DEC News</strong></h3>
@@ -71,10 +71,7 @@ TO DO:
           </div>
         </div>
 </div>
-
-
-
-    </div>
+</div> -->
 
 <body class="module-home" data-spy="scroll" data-target=".navbar">
 
@@ -1093,71 +1090,10 @@ TO DO:
 
           </section>
 
-          <section class="col-xs-12 col-sm-6 col-md-4">
-
-            <figure><img src="images/Julz.JPG" alt="" class=" img-responsive" /></figure>
-
-            <header>
-
-              <h5>Julia Lisovska</h5>
-
-              <h6> </h6>
-              <!--
-                                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-
-                                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-                                    <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-                                    <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-                                    <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                                  -->
-            </header>
-
-          </section>
-
-
-
 
         </div>
         <!--=============================================================================== -->
         <div class="row mt-3"><br></div>
-        <div class="team-pan row">
-
-          <section class="col-xs-12 col-sm-6 col-md-4">
-
-            <figure><img src='images/Nastya.JPG' alt="" class=" img-responsive" /></figure>
-
-            <header>
-
-              <h5>Anastasia Jerjomina</h5>
-
-              <h6> </h6>
-              <!--
-                                  <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-
-                                  <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-                                  <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-                                  <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-                                  <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                              -->
-            </header>
-
-          </section>
-
-
-
-
-
-        </div>
 
         <!-- Team -->
 
